# mastodon-thread

./: Cargo.toml  index.html
src/: clean_html.rs  get_thread.rs  main.rs  thread.rs
src/templates/: base.html  error.html  index.html  thread.html
