[package]
name = "mastodon-thread"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
http = "0.2.8"
minijinja = "0.26.0"
percent-encoding = "2.2.0"

[dependencies.serde]
version = "1.0.147"
features = [
    "std",
    "derive",
]

[dependencies.tokio]
version = "1.22.0"
default-features = false
features = [
    "rt-multi-thread",
    "macros",
    "net",
]
