[package]
name = "mastodon-thread"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
minijinja = "0.26.0"
percent-encoding = "2.2.0"
serde_json = "1.0.88"
async-recursion = "1.0.0"
lazy_static = "1.4.0"

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.serde]
version = "1.0.147"
features = [
    "std",
    "derive",
    "rc",
]

[dependencies.tokio]
version = "1.22.0"
default-features = false
features = [
    "rt-multi-thread",
    "macros",
    "net",
]
