[package]
name = "mastodon-thread"
version = "0.1.0"
edition = "2021"
authors = ["Remi Rampin <remi@rampin.org>"]
description = "Renders an ActivityPub thread as a tree"
repository = "https://github.com/remram44/mastodon-thread"
homepage = "https://github.com/remram44/mastodon-thread"

[dependencies]
axum = "0.5.17"
minijinja = "0.26.0"
percent-encoding = "2.2.0"
serde_json = "1.0.88"
async-recursion = "1.0.0"
ammonia = "3.2.1"

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.serde]
version = "1.0.147"
features = [
    "std",
    "derive",
    "rc",
]

[dependencies.tokio]
version = "1.22.0"
default-features = false
features = [
    "rt-multi-thread",
    "macros",
    "net",
]
